??? 2.4
- Optimized usage of ErrorSource for faster Error Highlighting.
- Fixed Run on save running when the buffer is non Java also.
- Updated to pmd 1.5
- Added option to export PMD results to files in various formats such as HTML, XML, Text, CSV etc.
- Added a new feature to show Progressbar when working on Large file sets.

October 31st 2003 - 2.3
1. Updated to PMD 1.3

August 18th 2003 - 2.2
1. Updated to PMD 1.2.1
2. Updated to jEdit 4.2 API changes
3. Added PMD in jEdit's File System Browser Plugins Menu.


May 19th 2003 - 2.1:
Added "clear ErrorList" option - thanks to Randall Schultz for the suggestion.
Added "check all open buffers" option - thanks to Randall Schultz for the suggestion.
Added support to define Custom RuleSets thereby facilitating integration of Custom Rulesets with built-in rulesets & their independent development.
Added C/C++, PHP support to Copy/Paste Detector. Now you can find out duplicate code in your C/C++ & PHP code besides the usual Java code.

April 18 2003 - 2.0:
Jiger Patel integrated CPD functionality.
Upgraded to work with pmd-1.05.

March 24 2003 - 1.5:
Upgraded to work with pmd-1.04.

February 11 2003 - 1.4:
Upgraded to work with pmd-1.03.

January 24 2003 - 1.3:
Upgraded to work with pmd-1.02.

November 20 2002 - 1.2:
Added some more fixes from Jiger.

November 14 2002 - 1.1:
Added "directory popup option" feature; thanks to Jiger Patel for the suggestions.

November 7 2002 - 1.0:
Updated to use pmd-1.01.

October 4 2002 - 0.9:
Updated to use pmd-1.0rc3

Augst 16 2002 - 0.8:
Fixed GUI lockup problem
Added example text to option pane
Updated to use pmd-0.9

August 2 2002 - 0.7:
Updated to use pmd-0.8
Now individual rules can be selected

July 26 2002 - 0.6:
Updated to use pmd-0.7.
PMD can be run on 1) all files in a directory or 2) recursively into a directory tree.
Added some detail to the Options area.

July 22 2002 - 0.5:
Moved options into Global Options area and made them look nicer.
Cleaned up menus.