@@ -38,7 +38,7 @@ then 2) select the "PMD->Check directory recursively" menu option.</p>
 <p>Starting 2.1, you can now add Custom Defined Rulesets with PMD plugin. Previously, if you want to use your own rulesets with the PMD plugin, you had to unjar the pmd.jar file & add your ruleset defination in the jar file & re-jar it & use it. But this procedure had to be repeated whenever a new PMD is out. But not anymore. Now you can simply point PMD plugin to your custom rulesets.xml file & drop your custom ruleset jars in either of jEdit jars directory(either system or user). Once this is done, you will be able to manipulate your Custom Rulesets just the way like the built-in ones.</p>
 
 <p>PMD jEdit 2.2 adds updates PMD plugin to the latest and the greatest PMD release, updates to Dynamic class loading feature of jEdit and adds PMD to jEdit's File System Browser for easy access.</p>
-<h2>Release Notes</h2>
+<h2>Release Notes &amp; Changelog</h2>
 		<h3>2.4</h3>
 		<ol>
 			<li>Optimized usage of ErrorSource for faster Error Highlighting.</li>
@@ -46,6 +46,7 @@ then 2) select the "PMD->Check directory recursively" menu option.</p>
 			<li>Fixed Run on save running when the buffer is non Java also.</li>
 			<li>Added option to export PMD results to a file in various formats such as HTML, XML, Text, CSV etc.</li>
 			<li>Added a new feature to show Progressbar when working on Large file sets.</li>
+			<li>Made Progress bar color user-configurable.</li>
 		</ol>
 		<h3>2.3</h3>
 		<ol>
