@@ -50,6 +50,8 @@ plugin.net.sourceforge.pmd.jedit.PMDJEditPlugin.browser-menu=pmd-check-file pmd-
 #pmd properties
 pmd.renderer=None
 pmd.showprogress=true
+pmd.progressbar.foreground=#FFC800
+pmd.progressbar.background=#FFFFFF
 
 
 
